# mutter-netbook

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
CMake/Modules/: FindPkgConfig.cmake  FindTinyCDB.cmake
capplet/: Makefile.in
capplet/data/: Makefile.in
capplet/src/: Makefile.in  meego-toolbar-properties.c  mtp-cc-panel.c  mtp-clock.c  mtp-jar.c  mtp-jar.h  mtp-toolbar-button.c  mtp-toolbar.c
data/: Makefile.in
libmeego-panel/: CMakeLists.txt  Makefile.in  meego-panel.pc.in
libmeego-panel/docs/: Makefile.in
libmeego-panel/docs/reference/: Makefile.in
libmeego-panel/docs/reference/libmeego-panel/: Makefile.in
libmeego-panel/docs/reference/libmeego-panel/html/: MplAppBookmarkManager.html  MplContentPane.html  MplEntry.html  MplPanelClient.html  MplPanelClutter.html  MplPanelGtk.html  MplPanelWindowless.html  appendices.html  index.html  index.sgml  license.html  meego-panel-Utility-Functions-and-Macros.html  meego-panel.devhelp  meego-panel.devhelp2  meegopanelclasses.html  meegopanelcss.html  meegopaneldesktop.html  meegopanelindex.html  meegopaneloverview.html  meegopanelreference.html  meegopanelutility.html  meegopanelwidgets.html
libmeego-panel/docs/reference/libmeego-panel/tmpl/: mpl-app-bookmark-manager.sgml  mpl-content-pane.sgml  mpl-entry.sgml  mpl-panel-client.sgml  mpl-panel-clutter.sgml  mpl-panel-common.sgml  mpl-panel-gtk.sgml  mpl-panel-windowless.sgml  mpl-utils.sgml  mpl-version.sgml
libmeego-panel/meego-panel/: CMakeLists.txt  Makefile.in  gdkapplaunchcontext-x11.c  meego-app-launches-store.c  meego-launch.c  mpl-app-launch-context.c  mpl-content-pane.c  mpl-entry.c  mpl-panel-background.c  mpl-panel-background.h  mpl-panel-client.c  mpl-panel-clutter.c  mpl-panel-gtk.c
libmeego-panel/tests/: CMakeLists.txt  Makefile.in  test-content-pane.c  test-entry.c  test-panel-gtk.c
libmeego-panel/theme/: Makefile.in
src/: CMakeLists.txt  Makefile.in  meego-netbook-constraints.c  meego-netbook-constraints.h  meego-netbook-mutter-hints.c  meego-netbook.c  meego-netbook.h  mnb-input-manager.c  mnb-panel-oop.c  mnb-panel-oop.h  mnb-panel.c  mnb-spinner.c  mnb-toolbar-button.c  mnb-toolbar-clock.c  mnb-toolbar.c
src/alttab/: Makefile.in  mnb-alttab-keys.c  mnb-alttab-overlay-app.c  mnb-alttab-overlay-app.h  mnb-alttab-overlay.c  mnb-alttab-overlay.h  mnb-alttab.c  mnb-alttab.h
src/effects/: CMakeLists.txt  Makefile.in  mnb-fancy-bin.c  mnb-switch-zones-effect.c  mnb-switch-zones-effect.h  mnb-zones-preview.c  mnb-zones-preview.h
src/notifications/: CMakeLists.txt  Makefile.in  meego-netbook-notify-store.c  mnb-notification-gtk.c  ntf-notification.c  ntf-overlay.c  ntf-source.c  ntf-tray.c  ntf-wm.c
src/presence/: Makefile.in  gs-idle-monitor.c  gsm-presence.c
tests/: Makefile.in
