CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Debug)
PROJECT(mutter-netbook)
SET(PKG_VERSION 0.77.4)
SET(PLUGIN_MAJOR_VERSION 0)
SET(PLUGIN_MINOR_VERSION 77)
SET(PLUGIN_MICRO_VERSION 4)
SET(PLUGIN_VERSION "${PLUGIN_MAJOR_VERSION}.${PLUGIN_MINOR_VERSION}.${PLUGIN_MICRO_VERSION}")
SET(PLUGIN_API_VERSION 1.0)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/Modules)
INCLUDE( ${CMAKE_SOURCE_DIR}/CMake/Modules/TargetDistclean.cmake)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(MX mx-1.0 REQUIRED)
PKG_CHECK_MODULES(DBUS dbus-glib-1 REQUIRED)
PKG_CHECK_MODULES(GTK gtk+-3.0 REQUIRED)
PKG_CHECK_MODULES(GCONF gconf-2.0 REQUIRED)
PKG_CHECK_MODULES(MUTTER libmutter REQUIRED)
PKG_CHECK_MODULES(SN libstartup-notification-1.0 REQUIRED)
PKG_CHECK_MODULES(SCRNSAVER xscrnsaver REQUIRED)

#FIND_PACKAGE(Gettext)

SET(PKG_DATADIR ${CMAKE_INSTALL_PREFIX}/share)
SET(LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
SET(PKG_BINDIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(PKG_LIBEXECDIR ${CMAKE_INSTALL_PREFIX}/libexec)
SET(PKG_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
SET(DATA_DIR ${PKG_DATADIR}/data)
SET(MUTTER_MEEGO_THEME_DIR "${PKG_DATADIR}/${PROJECT_NAME}/theme")
SET(MUTTER_MEEGO_PANELS_DIR "${PKG_DATADIR}/${PROJECT_NAME}/panels")
SET(MUTTER_PLUGIN_DIR ${PKG_LIBDIR}/mutter/plugins)


#install (FILES "${CMAKE_SOURCE_DIR}/data/markov.txt" "${CMAKE_SOURCE_DIR}/data/words.txt"        
#         DESTINATION ${DATA_DIR})

ADD_SUBDIRECTORY(libmeego-panel)
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(po)
#ADD_SUBDIRECTORY(data)
#ADD_SUBDIRECTORY(tests)
#ADD_SUBDIRECTORY(capplet)

IF (ENABLE_DOC)
    ADD_SUBDIRECTORY(doc)
ENDIF()

########### Add pkgconfig target ###############
#CONFIGURE_FILE(
#  "${CMAKE_CURRENT_SOURCE_DIR}/contentaction-0.1.pc.in"
#  "${CMAKE_CURRENT_BINARY_DIR}/contentaction-0.1.pc"
#  IMMEDIATE @ONLY)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/contentaction-0.1.pc DESTINATION lib/pkgconfig/)

########### Add uninstall target ###############
CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/cmake_uninstall.cmake.in"
  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
  IMMEDIATE @ONLY)
ADD_CUSTOM_TARGET(uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake") 

