FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(Qt4 4.7 COMPONENTS QtCore QtXml QtDbus REQUIRED)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 0)

PKG_CHECK_MODULES(GIO gio-unix-2.0 REQUIRED)
PKG_CHECK_MODULES(MT meegotouch REQUIRED)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-L${QT_LIBRARY_DIR})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${QT_INCLUDES}
    ${GIO_INCLUDE_DIRS}
    ${MT_INCLUDE_DIRS}
    )

SET (LIBRARY contentaction)

SET(LIBRARY_SRCS 
	contentaction.cpp 
	dbus.cpp 
	exec.cpp 
	mime.cpp 
	service.cpp 
	tracker.cpp 
	highlighter.cpp 
        config.cpp
    )

SET(MOC_FILES 
        service.h
    )

QT4_WRAP_CPP(LIBRARY_MOC_HEADERS ${MOC_FILES})

ADD_DEFINITIONS(-DDEFAULT_ACTIONS="@datadir@/contentaction")
ADD_DEFINITIONS(-DDEFAULT_L10N_DIR="@datadir@/contentaction/l10n")
ADD_DEFINITIONS(-DLCA_BUILD)

ADD_LIBRARY(${LIBRARY} SHARED ${LIBRARY_SRCS} ${MOC_FILES} ${LIBRARY_MOC_HEADERS})

SET_TARGET_PROPERTIES( ${LIBRARY} PROPERTIES
     SOVERSION 0
     VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
   )


TARGET_LINK_LIBRARIES(${LIBRARY}
    ${ZLIB_LIBRARIES}
    ${QT_LIBRARIES}
    ${GIO_LIBRARIES}
    ${MT_LIBRARIES}
    -L/usr/lib/qt4
    )

INSTALL(TARGETS ${LIBRARY} DESTINATION ${PKG_LIBDIR})


SET (PROGRAMS lca-tool)

SET(PROGRAM_SRCS
    lca-tool.cpp
    )

SET(PROGRAM_HEADERS
    )

ADD_EXECUTABLE(${PROGRAMS} ${PROGRAM_SRCS} ${PROGRAM_HEADERS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS}
    ${ZLIB_LIBRARIES}
    ${QT_LIBRARIES}
    contentaction
    )

INSTALL(TARGETS ${PROGRAMS} RUNTIME DESTINATION ${PKG_BINDIR})

